# dementia-boost

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint-validation.yaml  pull_request_template.md
scripts/: etl_pipeline.py  evaluate_baseline.py  test_etl_pipeline.py  test_evaluator.py  train_baseline.py
src/dementia_boost/: __init__.py
src/dementia_boost/core/: reproducibility.py
src/dementia_boost/data/: __init__.py  data_loader.py  data_procesor.py  data_processor.py  dataset.py
src/dementia_boost/models/classical_cnn/: __init__.py  classifier.py  feature_extractor.py  heads.py
src/dementia_boost/telemetry/: logger.py  metrics.py
src/dementia_boost/training/: evaluator.py  trainer.py
tests/: test_models.py
