[project]
name = "dementia-boost"
version = "0.1.0"
description = "QML for classifying patients with dementia "
readme = "README.md"
authors = [
    { name = "Kaue Miziara", email = "kauemiziara@gmail.com" },
    { name = "Julia Santos", email = "juliasantos7652@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "nibabel>=5.4.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.15.2"]


[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "UP"]

ignore = ["E741", "N806"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/*.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
